--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="Home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Me</a>
+        <a class="nav-link" href="About">About Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
+        <a class="nav-link" href="Skills">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Hobbies & Activities</a>
+        <a class="nav-link" href="H&A">Hobbies & Activities</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="Contact">Contact</a>
       </li>
 
     </ul>
