Initial Image Commit

--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
       <li class="nav-item">
         <a class="nav-link" href="Contact">Contact</a>
       </li>
-
     </ul>
     </div>
     </nav>
   </head>
+
+        <body>
+          <div class="page-header">
+           <h1>
+            <center> Welcome To My WebPage! </center>
+           </h1>
+         </div>
+
+         <img src = "./images/me.jpg" height = "200px" width = "175px" class="center"/>
+
+        </body>
