Image Commit II

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
            </h1>
          </div>
 
-         <img src = "./images/me.jpg" height = "200px" width = "175px" class="center"/>
+         <img src = "/images/me.jpg" height = "200px" width = "175px" class="center"/>
 
         </body>
