--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
            </h1>
          </div>
 
-         <img src = "me.jpg" height = "200px" width = "175px" class="center"/>
+         <center> <img src = "me.jpg" height = "200px" width = "175px"> </center>
 
         </body>
