index.html font

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang+"en">
   <head>
+    <font face = "Bedrock" size = "5">Bedrock</font><br />
 
     <link rel=“stylesheet” href=“https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css” integrity=“sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T” crossorigin=“anonymous”>
 
@@ -40,6 +41,8 @@
   </head>
 
         <body>
+          <font face = "Bedrock" size = "5">Bedrock</font><br />
+
           <div class="page-header">
            <h1>
             <center> Welcome To My WebPage! </center>
