--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
   </head>
 
         <body>
-          
 
           <div class="page-header">
            <h1>
@@ -49,5 +48,9 @@
          </div>
 
          <center> <img src = "me.jpg" height = "300px" width = "250px"> </center>
+
+         <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. </p>
+
+         <p> By exploring this webpage, you can learn more about me personally, academically, and professionally! </p>
 
         </body>
