--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
         <body>
 
+          <body style="background-color:LightBlue;">
+
           <div class="page-header">
            <h1>
             <center> Welcome To My WebPage! </center>
