--- a/Contact.html
+++ b/Contact.html
@@ -41,3 +41,15 @@
 </div>
 
 </head>
+
+  <body>
+
+  <body style="background-color:LightBlue;">
+
+  <div class="page-header">
+   <h1>
+    <center> Contact </center>
+   </h1>
+ </div>
+
+  </body>
