--- a/Contact.html
+++ b/Contact.html
@@ -13,6 +13,32 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<a class="navbar-brand" href="#">Hailey's Home</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="Home">Home <span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="About">About Me</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Skills">Skills</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="H&A">Hobbies & Activities</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Contact">Contact</a>
+    </li>
+  </ul>
+  </div>
+  </nav>
+
   <div class="page-header">
    <h1>
     <center> Contact </center>
