--- a/Contact.html
+++ b/Contact.html
@@ -21,19 +21,19 @@
 <div class="collapse navbar-collapse" id="navbarNav">
   <ul class="navbar-nav">
     <li class="nav-item active">
-      <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="About">About Me</a>
+      <a class="nav-link" href="About.html">About Me</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Skills">Skills</a>
+      <a class="nav-link" href="Skills.html">Skills</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="H&A">Hobbies & Activities</a>
+      <a class="nav-link" href="H&A.html">Hobbies & Activities</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="Contact">Contact</a>
+      <a class="nav-link" href="Contact.html">Contact</a>
     </li>
   </ul>
   </div>
