--- a/H&A.html
+++ b/H&A.html
@@ -38,3 +38,18 @@
   </div>
   </nav>
 </head>
+
+<body>
+
+  <body style="background-color:LightBlue;">
+
+  <div class="page-header">
+   <h1>
+    <center> My Hobbies & Activities </center>
+   </h1>
+ </div>
+
+  <center> <img src = "spotify.png" height = "200px" width = "150px"> </center>
+  <p> One of my favorite activities to do is to listen to music. No matter what my primary activity is, I'll be listening to music in the background. The first purchase I made when I started earning money was a subscription to Spotify Premium. </p>
+
+  </body>
