--- a/H&A.html
+++ b/H&A.html
@@ -52,4 +52,7 @@
   <center> <img src = "spotify.png" height = "150px" width = "300px"> </center>
   <p> One of my favorite activities to do is to listen to music. No matter what my primary activity is, I'll be listening to music in the background. The first purchase I made when I started earning money was a subscription to Spotify Premium. </p>
 
+    <center> <img src = "resident evil.jpeg" height = "150px" width = "300px"> </center>
+    <p> Playing Video Games has been one of my hobbies since I was a child. I've played a variety of video games on different consoles over the years. One of my favorite video games is the Resident Evil series. </p>
+
   </body>
