--- a/H&A.html
+++ b/H&A.html
@@ -61,4 +61,7 @@
     <center> <img src = "clover copy.jpeg" height = "200px" width = "225px"> </center>
     <p> This is my dog, Clover. She is a 6-year-old Boxer and she is my best friend. When I am home, I love to take her on walks, car rides, playing, and cuddling with her. </p>
 
+    <center> <img src = "fwends copy.jpeg" height = "150px" width = "300px"> </center>
+    <p> Another activity I love doing when I'm home is hang out with my friends. We have been friends since we were 5 years old, so we love being together. Unfortunately, we all go to different colleges, so when all of us are home, we hang out. </p>
+
   </body>
