--- a/Skills.html
+++ b/Skills.html
@@ -53,16 +53,16 @@
 
 
     <center> <img src = "Mag Glass.jpeg" height = "200px" width = "200px"> </center>
-    <p> Observing </p>
+    <center Observing </center>
 
     <p> Since I was young, I have always been an observer. Over the years, I have improved my observation skills through pursuing my academic career and aging. I am an introverted person, so I prefer to observe rather than act/talk. </p>
 
     <center> <img src = "organizing.jpeg" height = "200px" width = "250px"> </center>
-    <p> Organizing </p>
+    <center> Organizing </center>
 
     <p> Another skill I have had since I was young is organizing. I have always kept all of my spaces and school work organized. Naturally, this skill has improved as I've gotten older due to practice within my academics and personal life. </p>
 
     <center> <img src = "critical thinking.jpeg" height = "200px" width = "200px"> </center>
-    <p> Critical Thinking </p>
+    <center> Critical Thinking </center>
 
     <p> Critical thinking is a skill I have developed while I have been in school. A variety of subjects and assignments require you to think critically in order to complete them. Over the years, as situations become more difficult, you need to think more critically. </p>
