--- a/Skills.html
+++ b/Skills.html
@@ -53,7 +53,7 @@
 
 
     <center> <img src = "Mag Glass.jpeg" height = "200px" width = "200px"> </center>
-    <center Observing </center>
+    <center> Observing </center>
 
     <p> Since I was young, I have always been an observer. Over the years, I have improved my observation skills through pursuing my academic career and aging. I am an introverted person, so I prefer to observe rather than act/talk. </p>
 
