Final Font Change

--- a/Skills.html
+++ b/Skills.html
@@ -41,6 +41,12 @@
 
   <body>
 
+    <style>
+    body {
+  font-family: "Trirong", serif;
+    }
+    </style>
+
     <body style="background-color:LightBlue;">
 
     <div class="page-header">
