--- a/Contact.html
+++ b/Contact.html
@@ -76,6 +76,12 @@
 
   <body>
 
+    <style>
+    body {
+  font-family: "Trirong", serif;
+    }
+    </style>
+
   <body style="background-color:LightBlue;">
 
   </body>
