--- a/H&A.html
+++ b/H&A.html
@@ -71,3 +71,43 @@ font-family: "Trirong", serif;
     <p> Another activity I love doing when I'm home is hang out with my friends. We have been friends since we were 5 years old, so we love being together. Unfortunately, we all go to different colleges, so when all of us are home, we hang out. </p>
 
   </body>
+
+
+          <footer class="bg-light text-center text-white">
+
+    <div class="container p-4 pb-0">
+
+      <section class="mb-4">
+
+        <a
+          class="btn text-white btn-floating m-1"
+          style="background-color: #ac2bac;"
+          href="https://www.instagram.com/hailey__robbins/"
+          role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
+
+        <a
+          class="btn text-white btn-floating m-1"
+          style="background-color: #0082ca;"
+          href="https://www.linkedin.com/in/hailey-r-899a49201/"
+          role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+
+        <a
+          class="btn text-white btn-floating m-1"
+          style="background-color: #333333;"
+          href="https://github.com/HPRobbins"
+          role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+
+    </div>
+
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2020 Copyright:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    </div>
+  </footer>
