--- a/About.html
+++ b/About.html
@@ -60,3 +60,43 @@ font-family: "Trirong", serif;
  <p> Outside of my academics and professional life, there are some important personal facts about me as well. I am 20 years old and my hometown is Carrollton, KY. I have a small immediate family, but a very large extended family. Ever since I was a child, my family and I would volunteer at various places. We have volunteered at places in our community and traveled to different states to volunteer. Some places I have volunteered are our local food pantry, a women's shelter in Alaska, helping after the Gatlinburg wildfires, the Out of the Darkness walk, etc. In my free time, I enjoy reading, watching true crime documentaries, playing with my dog, and spending time with my family and friends. </p>
 
  </body>
+
+
+         <footer class="bg-light text-center text-white">
+
+   <div class="container p-4 pb-0">
+
+     <section class="mb-4">
+
+       <a
+         class="btn text-white btn-floating m-1"
+         style="background-color: #ac2bac;"
+         href="https://www.instagram.com/hailey__robbins/"
+         role="button"
+         ><i class="fab fa-instagram"></i
+       ></a>
+
+       <a
+         class="btn text-white btn-floating m-1"
+         style="background-color: #0082ca;"
+         href="https://www.linkedin.com/in/hailey-r-899a49201/"
+         role="button"
+         ><i class="fab fa-linkedin-in"></i
+       ></a>
+
+       <a
+         class="btn text-white btn-floating m-1"
+         style="background-color: #333333;"
+         href="https://github.com/HPRobbins"
+         role="button"
+         ><i class="fab fa-github"></i
+       ></a>
+     </section>
+
+   </div>
+
+   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+     © 2020 Copyright:
+     <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+   </div>
+ </footer>
