Background Color Changes

--- a/About.html
+++ b/About.html
@@ -42,6 +42,11 @@
 <body>
 
   <style>
+  @media (max-width: 600px) {
+  header {
+     background-color: blue;
+  }
+}
   body {
 font-family: "Trirong", serif;
   }
@@ -99,4 +104,12 @@ font-family: "Trirong", serif;
      © 2020 Copyright:
      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
    </div>
+
+  <style>
+   @media (min-width: 900px) {
+   header {
+      background-color: gray;
+   }
+}
+</style>
  </footer>
