--- a/Skills.html
+++ b/Skills.html
@@ -42,6 +42,12 @@
   <body>
 
     <style>
+    @media (max-width: 600px) {
+    header {
+       background-color: blue;
+    }
+}
+
     body {
   font-family: "Trirong", serif;
     }
@@ -113,4 +119,12 @@
       © 2020 Copyright:
       <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
+
+    <style>
+    @media (min-width: 900px) {
+    header {
+       background-color: gray;
+    }
+}
+    </style>
   </footer>
