--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
           <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 
           <style>
+          @media (min-width: 600px) and (max-width: 900px) {
+          header {
+             background-color: blue;
+          }
+      }
+
           body {
         font-family: "Trirong", serif;
           }
@@ -103,4 +109,11 @@
     © 2020 Copyright:
     <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
   </div>
+  <style>
+   @media (min-width: 900px) {
+   header {
+      background-color: gray;
+   }
+}
+</style>
 </footer>
