--- a/About.html
+++ b/About.html
@@ -44,7 +44,7 @@
   <style>
   @media (max-width: 600px) {
   header {
-     background-color: blue;
+     background-color: MediumBlue;
   }
 }
   body {
@@ -108,7 +108,7 @@ font-family: "Trirong", serif;
   <style>
    @media (min-width: 900px) {
    header {
-      background-color: gray;
+      background-color: Gainsboro;
    }
 }
 </style>
