--- a/Contact.html
+++ b/Contact.html
@@ -79,7 +79,7 @@
     <style>
     @media (max-width: 600px) {
     header {
-       background-color: blue;
+       background-color: MediumBlue;
     }
 }
     body {
@@ -133,7 +133,7 @@
     <style>
      @media (min-width: 900px) {
      header {
-        background-color: gray;
+        background-color: Gainsboro;
      }
   }
   </style>
