--- a/H&A.html
+++ b/H&A.html
@@ -44,7 +44,7 @@
   <style>
   @media (max-width: 600px) {
   header {
-     background-color: blue;
+     background-color: MediumBlue;
   }
 }
   body {
@@ -119,7 +119,7 @@ font-family: "Trirong", serif;
     <style>
      @media (min-width: 900px) {
      header {
-        background-color: gray;
+        background-color: Gainsboro;
      }
   }
   </style>
