--- a/Skills.html
+++ b/Skills.html
@@ -44,7 +44,7 @@
     <style>
     @media (max-width: 600px) {
     header {
-       background-color: blue;
+       background-color: MediumBlue;
     }
 }
 
@@ -123,7 +123,7 @@
     <style>
     @media (min-width: 900px) {
     header {
-       background-color: gray;
+       background-color: Gainsboro;
     }
 }
     </style>
