--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <style>
           @media (min-width: 600px) and (max-width: 900px) {
           header {
-             background-color: blue;
+             background-color: MediumBlue;
           }
       }
 
@@ -112,7 +112,7 @@
   <style>
    @media (min-width: 900px) {
    header {
-      background-color: gray;
+      background-color: Gainsboro;
    }
 }
 </style>
