Open Link to Blank Page

--- a/About.html
+++ b/About.html
@@ -77,6 +77,7 @@ font-family: "Trirong", serif;
          class="btn text-white btn-floating m-1"
          style="background-color: #ac2bac;"
          href="https://www.instagram.com/hailey__robbins/"
+         target="_blank"
          role="button"
          ><i class="fab fa-instagram"></i
        ></a>
@@ -85,6 +86,7 @@ font-family: "Trirong", serif;
          class="btn text-white btn-floating m-1"
          style="background-color: #0082ca;"
          href="https://www.linkedin.com/in/hailey-r-899a49201/"
+         target="_blank"
          role="button"
          ><i class="fab fa-linkedin-in"></i
        ></a>
@@ -93,6 +95,7 @@ font-family: "Trirong", serif;
          class="btn text-white btn-floating m-1"
          style="background-color: #333333;"
          href="https://github.com/HPRobbins"
+         target="_blank"
          role="button"
          ><i class="fab fa-github"></i
        ></a>
