--- a/Contact.html
+++ b/Contact.html
@@ -102,6 +102,7 @@
           class="btn text-white btn-floating m-1"
           style="background-color: #ac2bac;"
           href="https://www.instagram.com/hailey__robbins/"
+          target="_blank"
           role="button"
           ><i class="fab fa-instagram"></i
         ></a>
@@ -110,6 +111,7 @@
           class="btn text-white btn-floating m-1"
           style="background-color: #0082ca;"
           href="https://www.linkedin.com/in/hailey-r-899a49201/"
+          target="_blank"
           role="button"
           ><i class="fab fa-linkedin-in"></i
         ></a>
@@ -118,6 +120,7 @@
           class="btn text-white btn-floating m-1"
           style="background-color: #333333;"
           href="https://github.com/HPRobbins"
+          target="_blank"
           role="button"
           ><i class="fab fa-github"></i
         ></a>
