--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         class="btn text-white btn-floating m-1"
         style="background-color: #ac2bac;"
         href="https://www.instagram.com/hailey__robbins/"
+        target="_blank"
         role="button"
         ><i class="fab fa-instagram"></i
       ></a>
@@ -90,6 +91,7 @@
         class="btn text-white btn-floating m-1"
         style="background-color: #0082ca;"
         href="https://www.linkedin.com/in/hailey-r-899a49201/"
+        target="_blank"
         role="button"
         ><i class="fab fa-linkedin-in"></i
       ></a>
@@ -98,6 +100,7 @@
         class="btn text-white btn-floating m-1"
         style="background-color: #333333;"
         href="https://github.com/HPRobbins"
+        target="_blank"
         role="button"
         ><i class="fab fa-github"></i
       ></a>
