Website Bottom Removal and Centering

--- a/About.html
+++ b/About.html
@@ -60,9 +60,9 @@ font-family: "Trirong", serif;
    </h1>
  </div>
 
- <p> Hello! My name is Hailey Robbins, and I am currently a Sophmore/Junior at Northern Kentucky University. I graduated from Carroll County High School in 2021 where I was Top 20 in my class and was a dual credit student at the Jefferson Community and Technical College Carrollton Campus for five semesters. Outside of my academics in high school, I was involved with concert band for seven years, marching band for seven years, woodwind section leader for a year, and a delegate for Carroll County at the Kentucky United Nations Association for five years. After I graduated high school, I attended Georgetown College for a semester and then transfered to NKU. During my college career, I have been on the Dean's/President's List for 4 semesters. In March 2021, I started my first job as a Chiropractic Assistant and worked there until I went off to college in August 2021. </p>
+ <center> <p> Hello! My name is Hailey Robbins, and I am currently a Sophmore/Junior at Northern Kentucky University. I graduated from Carroll County High School in 2021 where I was Top 20 in my class and was a dual credit student at the Jefferson Community and Technical College Carrollton Campus for five semesters. Outside of my academics in high school, I was involved with concert band for seven years, marching band for seven years, woodwind section leader for a year, and a delegate for Carroll County at the Kentucky United Nations Association for five years. After I graduated high school, I attended Georgetown College for a semester and then transfered to NKU. During my college career, I have been on the Dean's/President's List for 4 semesters. In March 2021, I started my first job as a Chiropractic Assistant and worked there until I went off to college in August 2021. </p> </center>
 
- <p> Outside of my academics and professional life, there are some important personal facts about me as well. I am 20 years old and my hometown is Carrollton, KY. I have a small immediate family, but a very large extended family. Ever since I was a child, my family and I would volunteer at various places. We have volunteered at places in our community and traveled to different states to volunteer. Some places I have volunteered are our local food pantry, a women's shelter in Alaska, helping after the Gatlinburg wildfires, the Out of the Darkness walk, etc. In my free time, I enjoy reading, watching true crime documentaries, playing with my dog, and spending time with my family and friends. </p>
+ <center> <p> Outside of my academics and professional life, there are some important personal facts about me as well. I am 20 years old and my hometown is Carrollton, KY. I have a small immediate family, but a very large extended family. Ever since I was a child, my family and I would volunteer at various places. We have volunteered at places in our community and traveled to different states to volunteer. Some places I have volunteered are our local food pantry, a women's shelter in Alaska, helping after the Gatlinburg wildfires, the Out of the Darkness walk, etc. In my free time, I enjoy reading, watching true crime documentaries, playing with my dog, and spending time with my family and friends. </p> </center>
 
  </body>
 
@@ -104,8 +104,8 @@ font-family: "Trirong", serif;
    </div>
 
    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-     
-     <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+
+     <a class="text-white" href="https://mdbootstrap.com/"></a>
    </div>
 
   <style>
