--- a/H&A.html
+++ b/H&A.html
@@ -61,19 +61,19 @@ font-family: "Trirong", serif;
  </div>
 
   <center> <img src = "spotify.png" height = "150px" width = "300px"> </center>
-  <p> One of my favorite activities to do is to listen to music. No matter what my primary activity is, I'll be listening to music in the background. The first purchase I made when I started earning money was a subscription to Spotify Premium. </p>
+  <center> <p> One of my favorite activities to do is to listen to music. No matter what my primary activity is, I'll be listening to music in the background. The first purchase I made when I started earning money was a subscription to Spotify Premium. </p> </center>
 
     <center> <img src = "resident evil.jpeg" height = "150px" width = "300px"> </center>
-    <p> Playing Video Games has been one of my hobbies since I was a child. I've played a variety of video games on different consoles over the years. One of my favorite video games is the Resident Evil series. </p>
+    <center> <p> Playing Video Games has been one of my hobbies since I was a child. I've played a variety of video games on different consoles over the years. One of my favorite video games is the Resident Evil series. </p> </center>
 
     <center> <img src = "the selection.jpeg" height = "200px" width = "200px"> </center>
-    <p> Another hobby I have had since I was a child is reading. When I was in school, I would often get in trouble for reading my library book during regular class time. One of my favorite book series is The Selection. </p>
+    <center> <p> Another hobby I have had since I was a child is reading. When I was in school, I would often get in trouble for reading my library book during regular class time. One of my favorite book series is The Selection. </p> </center>
 
     <center> <img src = "clover copy.jpeg" height = "200px" width = "225px"> </center>
-    <p> This is my dog, Clover. She is a 6-year-old Boxer and she is my best friend. When I am home, I love to take her on walks, car rides, playing, and cuddling with her. </p>
+    <center> <p> This is my dog, Clover. She is a 6-year-old Boxer and she is my best friend. When I am home, I love to take her on walks, car rides, playing, and cuddling with her. </p> </center>
 
     <center> <img src = "fwends copy.jpeg" height = "200px" width = "300px"> </center>
-    <p> Another activity I love doing when I'm home is hang out with my friends. We have been friends since we were 5 years old, so we love being together. Unfortunately, we all go to different colleges, so when all of us are home, we hang out. </p>
+    <center> <p> Another activity I love doing when I'm home is hang out with my friends. We have been friends since we were 5 years old, so we love being together. Unfortunately, we all go to different colleges, so when all of us are home, we hang out. </p> </center>
 
   </body>
 
@@ -112,8 +112,8 @@ font-family: "Trirong", serif;
     </div>
 
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+
+      <a class="text-white" href="https://mdbootstrap.com/"></a>
     </div>
 
     <style>
