--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 
          <center> <img src = "me.jpg" height = "300px" width = "250px"> </center>
 
-         <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. </p>
+         <center> <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. </p> </center>
 
-         <p> By exploring this webpage, you can learn more about me personally, academically, and professionally! </p>
+         <center> <p> By exploring this webpage, you can learn more about me personally, academically, and professionally! </p> </center>
 
         </body>
 
@@ -109,8 +109,8 @@
   </div>
 
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-  
-    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+
+    <a class="text-white" href="https://mdbootstrap.com/"></a>
   </div>
   <style>
    @media (min-width: 900px) {
