--- a/H&A.html
+++ b/H&A.html
@@ -83,30 +83,103 @@ font-family: "Trirong", serif;
     <div class="container p-4 pb-0">
 
       <section class="mb-4">
+        <style>
+        .wrapper .icon{
+  position: relative;
+  background-color: #ffffff;
+  border-radius: 50%;
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 22px;
+  display: inline-block;
+  align-items: center;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  color: #333;
+  text-decoration: none;
+}
+.wrapper .tooltip {
+  position: absolute;
+  top: 0;
+  line-height: 1.5;
+  font-size: 14px;
+  background-color: #ffffff;
+  color: #ffffff;
+  padding: 5px 8px;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .tooltip::before {
+  position: absolute;
+  content: "";
+  height: 8px;
+  width: 8px;
+  background-color: #ffffff;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%) rotate(45deg);
+  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.wrapper .icon:hover .tooltip {
+  top: -45px;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
+}
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
+  background-color: #3b5999;
+  color: #ffffff;
+}
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
+  background-color: #e1306c;
+  color: #ffffff;
+}
+.wrapper .github:hover,
+.wrapper .github:hover .tooltip,
+.wrapper .github:hover .tooltip::before {
+  background-color: #333333;
+  color: #ffffff;
+}
+.wrapper .linkedin:hover,
+.wrapper .linkedin:hover .tooltip,
+.wrapper .linkedin:hover .tooltip::before {
+  background-color: #0A66C2;
+  color: #ffffff;
+}
+        </style>
 
-        <a
-          class="btn text-white btn-floating m-1"
-          style="background-color: #ac2bac;"
-          href="https://www.instagram.com/hailey__robbins/"
-          role="button"
-          ><i class="fab fa-instagram"></i
-        ></a>
-
-        <a
-          class="btn text-white btn-floating m-1"
-          style="background-color: #0082ca;"
-          href="https://www.linkedin.com/in/hailey-r-899a49201/"
-          role="button"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-
-        <a
-          class="btn text-white btn-floating m-1"
-          style="background-color: #333333;"
-          href="https://github.com/HPRobbins"
-          role="button"
-          ><i class="fab fa-github"></i
-        ></a>
+        <div class="wrapper">
+      <a href="https://www.facebook.com/people/Hailey-Robbins/100090080358593/" class="icon facebook" target="_blank">
+        <div class="tooltip">Facebook</div>
+        <span><i class="fab fa-facebook-f"></i></span>
+      </a>
+      <a href="https://www.instagram.com/hailey__robbins/" class="icon instagram" target="_blank">
+        <div class="tooltip">Instagram</div>
+        <span><i class="fab fa-instagram"></i></span>
+      </a>
+      <a href="https://github.com/HPRobbins" class="icon github" target="_blank">
+        <div class="tooltip">Github</div>
+        <span><i class="fab fa-github"></i></span>
+      </a>
+      <a href="https://www.linkedin.com/in/hailey-r-899a49201/" class="icon linkedin" target="_blank">
+        <div class="tooltip">Linkedin</div>
+        <span><i class="fab fa-linkedin"></i></span>
+      </a>
+    </div>
       </section>
 
     </div>
