Cursive Font Change

--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+  <style>
+  head{
+    font-family: Bradley Hand, cursive
+  }
+  </style>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <a class="navbar-brand" href="#">Hailey's Home</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -84,7 +90,7 @@
     }
 }
     body {
-  font-family: "Trirong", serif;
+  font-family: Bradley Hand, cursive;
     }
     </style>
 
