--- a/Skills.html
+++ b/Skills.html
@@ -14,6 +14,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
 
+  <style>
+  head{
+    font-family: Bradley Hand, cursive
+  }
+  </style>
+
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <a class="navbar-brand" href="#">Hailey's Home</a>
@@ -52,7 +58,7 @@
 }
 
     body {
-  font-family: "Trirong", serif;
+  font-family: Bradley Hand, cursive;
     }
     </style>
 
