--- a/About.html
+++ b/About.html
@@ -57,6 +57,10 @@
   body {
 font-family: Bradley Hand, cursive;
   }
+  p {
+    padding-bottom: 25px;
+    padding-top: 25px;
+  }
   </style>
 
   <body style="background-color:LightBlue;">
