--- a/Skills.html
+++ b/Skills.html
@@ -60,6 +60,11 @@
     body {
   font-family: Bradley Hand, cursive;
     }
+
+    p {
+      padding-bottom: 25px;
+      padding-top: 25px;
+    }
     </style>
 
     <body style="background-color:LightBlue;">
