--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
           body {
         font-family: Bradley Hand, cursive;
           }
+
+          p {
+            padding-bottom: 25px;
+            padding-top: 25px;
+          }
           </style>
 
-          <body style="background-color:LightBlue;">
+          <body style="background-color:LightBlue">
 
           <div class="page-header">
            <h1>
@@ -73,9 +78,7 @@
 
          <center> <img src = "me.jpg" height = "300px" width = "250px"> </center>
 
-         <center> <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. </p> </center>
-
-         <center> <p> By exploring this webpage, you can learn more about me personally, academically, and professionally! </p> </center>
+         <center> <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. By exploring this webpage, you can learn more about me personally, academically, and professionally! </p> </center>
 
         </body>
 
