Images Path Fix

--- a/Skills.html
+++ b/Skills.html
@@ -78,17 +78,17 @@
    <center> <p> During the Fall 2022 semester, I took a Career Development class at NKU. In this class, we did various assessments about our personalities, skills, values, etc. Through the skills assessment we took, I was able to identify some of my top skills. </p> </center>
 
 
-    <center> <img src = "Mag Glass.jpeg" height = "200px" width = "200px"> </center>
+    <center> <img src = "/Users/haileyrobbins/Documents/ASE-Project-1/ASE-Project-1/images/Mag Glass.jpeg" height = "200px" width = "200px"> </center>
     <center> Observing </center>
 
     <center> <p> Since I was young, I have always been an observer. Over the years, I have improved my observation skills through pursuing my academic career and aging. I am an introverted person, so I prefer to observe rather than act/talk. </p> </center>
 
-    <center> <img src = "organizing.jpeg" height = "200px" width = "250px"> </center>
+    <center> <img src = "/Users/haileyrobbins/Documents/ASE-Project-1/ASE-Project-1/images/organizing.jpeg" height = "200px" width = "250px"> </center>
     <center> Organizing </center>
 
     <center> <p> Another skill I have had since I was young is organizing. I have always kept all of my spaces and school work organized. Naturally, this skill has improved as I've gotten older due to practice within my academics and personal life. </p> </center>
 
-    <center> <img src = "critical thinking.jpeg" height = "200px" width = "200px"> </center>
+    <center> <img src = "/Users/haileyrobbins/Documents/ASE-Project-1/ASE-Project-1/images/critical thinking.jpeg" height = "200px" width = "200px"> </center>
     <center> Critical Thinking </center>
 
     <center> <p> Critical thinking is a skill I have developed while I have been in school. A variety of subjects and assignments require you to think critically in order to complete them. Over the years, as situations become more difficult, you need to think more critically. </p> </center>
