--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
            </h1>
          </div>
 
-         <center> <img src = "me.jpg" height = "300px" width = "250px"> </center>
+         <center> <img src = "/Users/haileyrobbins/Documents/ASE-Project-1/ASE-Project-1/images/me.jpg" height = "300px" width = "250px"> </center>
 
          <center> <p> Hello! My name is Hailey Robbins and I am a Junior Computer Information Technology student at Northern Kentucky University. By exploring this webpage, you can learn more about me personally, academically, and professionally! </p> </center>
 
